[package]
name = "beard"
version = "0.2.0"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/primetype/beard"
documentation = "https://docs.rs/beard"
homepage = "https://github.com/primetype/beard"
description = "Handy macro to generate formatted text in rust"
exclude = [
    ".gitignore",
]

[dependencies]